adl-frontend/src/test/resources/unit/unsupported/error/semantic/attributes/attr2.adl
// attribute declaration without type

primitive attributes.attr2 {
  @SemanticError(GroupId="ATTR", ErrorId="UNDEFINED_TYPE")
  // simple attribute name
  attribute attr_name1;
}
